--- a/template/src/pages/welcome/index.module.less
+++ b/template/src/pages/welcome/index.module.less
@@ -9,6 +9,12 @@
   }
 }
 
-.img {
-  display: block;
+.img_box {
+  width: 100%;
+  margin: 12px 0;
+
+  .img {
+    display: block;
+    margin: 0 auto;
+  }
 }
